# Harjoitustyo

./: .gitignore  README.md  main.py  pyproject.toml  test_integration.py  test_markov.py  test_performance.py
docs/: kayttoohje.md  maarittelydokumentti.md  testausraportti.md  toteutusraportti.md
docs/viikkoraportit/: viikko1  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md  viikko7.md
src/: game.py  markov.py
tests/: test_markov.py
