[tool.poetry]
name = "kps-ai"
version = "0.1.0"
description = "kivi-sakset-paperi- pelin oppiva AI- projekti"
authors = ["Era Rexhepi <era.rexhepi11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

