[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = "Kivi-Sakset-Paperi tekoälyprojekti"
authors = ["Etunimi Sukunimi <sähköposti@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]